--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <a href="hihihi">hi</a>
-    <i class="ic-community" aria-label="커뮤니티"></i>
+    <div class="container">
+      <strong class="tag-red">특가</strong>
+      <span class="tag-gray">무료배송</span>
+      <strong class="tag-green">첫 리뷰 두 배 적립</strong>
+    </div>
   </body>
 </html>
