--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
         <div class="avatar-32">
           <img src="./assets/images/img-user-default.png" alt="기본 이미지" />
         </div>
+        <div class="star-rating-13">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-16">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-20">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-24">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
       </div>
     </div>
   </body>
