💄 Implement price components

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <div class="avatar-32">
           <img src="./assets/images/img-user-default.png" alt="기본 이미지" />
         </div>
+      </div>
+      <div>
         <div class="star-rating-13">
           <i class="ic-star is-active"></i>
           <i class="ic-star is-active"></i>
@@ -67,6 +69,24 @@
           <i class="ic-star is-active"></i>
           <i class="ic-star is-active"></i>
           <i class="ic-star is-active"></i>
+        </div>
+      </div>
+      <div>
+        <div class="price-off">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-16">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-20">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-32">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
         </div>
       </div>
     </div>
