--- a/index.html
+++ b/index.html
@@ -90,34 +90,55 @@
         </div>
       </div>
       <div>
-        <button class="btn-primary btn-32">버튼입니다</button>
-        <button class="btn-secondary btn-32">버튼입니다</button>
-        <button class="btn-outlined btn-32">버튼입니다</button>
-        <button class="btn-ghost btn-32">버튼입니다</button>
+        <div>
+          <button class="btn-primary btn-32">버튼입니다</button>
+          <button class="btn-secondary btn-32">버튼입니다</button>
+          <button class="btn-outlined btn-32">버튼입니다</button>
+          <button class="btn-ghost btn-32">버튼입니다</button>
+        </div>
+        <div>
+          <button class="btn-primary btn-40">버튼입니다</button>
+          <button class="btn-secondary btn-40">버튼입니다</button>
+          <button class="btn-outlined btn-40">버튼입니다</button>
+          <button class="btn-ghost btn-40">버튼입니다</button>
+        </div>
+        <div>
+          <button class="btn-primary btn-48">버튼입니다</button>
+          <button class="btn-secondary btn-48">버튼입니다</button>
+          <button class="btn-outlined btn-48">버튼입니다</button>
+          <button class="btn-ghost btn-48">버튼입니다</button>
+        </div>
+        <div>
+          <button class="btn-primary btn-55">버튼입니다</button>
+          <button class="btn-secondary btn-55">버튼입니다</button>
+          <button class="btn-outlined btn-55">버튼입니다</button>
+          <button class="btn-ghost btn-55">버튼입니다</button>
+        </div>
+        <div>
+          <button class="btn-primary btn-55" disabled>버튼입니다</button>
+          <button class="btn-secondary btn-55" disabled>버튼입니다</button>
+          <button class="btn-outlined btn-55" disabled>버튼입니다</button>
+          <button class="btn-ghost btn-55" disabled>버튼입니다</button>
+        </div>
       </div>
       <div>
-        <button class="btn-primary btn-40">버튼입니다</button>
-        <button class="btn-secondary btn-40">버튼입니다</button>
-        <button class="btn-outlined btn-40">버튼입니다</button>
-        <button class="btn-ghost btn-40">버튼입니다</button>
+        <input class="form-input" placeholder="Placeholder Text" />
       </div>
-      <div>
-        <button class="btn-primary btn-48">버튼입니다</button>
-        <button class="btn-secondary btn-48">버튼입니다</button>
-        <button class="btn-outlined btn-48">버튼입니다</button>
-        <button class="btn-ghost btn-48">버튼입니다</button>
+
+      <div class="select-group is-active">
+        <select class="form-select">
+          <option value="1">선택 사항 1</option>
+          <option value="2">선택 사항 2</option>
+          <option value="3">선택 사항 3</option>
+          <option value="4">선택 사항 4</option>
+          <option value="5">선택 사항 5</option>
+        </select>
+        <i class="ic-caret" aria-hidden></i>
       </div>
-      <div>
-        <button class="btn-primary btn-55">버튼입니다</button>
-        <button class="btn-secondary btn-55">버튼입니다</button>
-        <button class="btn-outlined btn-55">버튼입니다</button>
-        <button class="btn-ghost btn-55">버튼입니다</button>
-      </div>
-      <div>
-        <button class="btn-primary btn-55" disabled>버튼입니다</button>
-        <button class="btn-secondary btn-55" disabled>버튼입니다</button>
-        <button class="btn-outlined btn-55" disabled>버튼입니다</button>
-        <button class="btn-ghost btn-55" disabled>버튼입니다</button>
+
+      <div class="input-group" aria-hidden>
+        <i class="ic-search"></i>
+        <input type="text" class="form-input" placeholder="스토어 검색" />
       </div>
     </div>
   </body>
