--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
       <div>
         <input class="form-input" placeholder="Placeholder Text" />
       </div>
-
       <div class="select-group is-active">
         <select class="form-select">
           <option value="1">선택 사항 1</option>
@@ -135,10 +134,35 @@
         </select>
         <i class="ic-caret" aria-hidden></i>
       </div>
-
       <div class="input-group" aria-hidden>
         <i class="ic-search"></i>
         <input type="text" class="form-input" placeholder="스토어 검색" />
+      </div>
+
+      <div class="pagination">
+        <button type="button" class="page-control page-prev">
+          <i class="ic-chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item">
+            <a href="/">111111</a>
+          </li>
+          <li class="page-item">
+            <a href="/">111112</a>
+          </li>
+          <li class="page-item is-active">
+            <a href="/">111113</a>
+          </li>
+          <li class="page-item">
+            <a href="/">111114</a>
+          </li>
+          <li class="page-item">
+            <a href="/">111115</a>
+          </li>
+        </ol>
+        <button type="button" class="page-control page-next">
+          <i class="ic-chevron"></i>
+        </button>
       </div>
     </div>
   </body>
