--- a/index.html
+++ b/index.html
@@ -23,147 +23,5 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <div class="container">
-      <div>
-        <strong class="tag-red">특가</strong>
-        <span class="tag-gray">무료배송</span>
-        <strong class="tag-green">첫 리뷰 두 배 적립</strong>
-      </div>
-      <div>
-        <div class="avatar-32">
-          <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
-        </div>
-        <div class="avatar-24">
-          <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
-        </div>
-        <div class="avatar-32">
-          <img src="./assets/images/img-user-default.png" alt="기본 이미지" />
-        </div>
-      </div>
-      <div>
-        <div class="star-rating-13">
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-        </div>
-        <div class="star-rating-16">
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-        </div>
-        <div class="star-rating-20">
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-        </div>
-        <div class="star-rating-24">
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-          <i class="ic-star is-active"></i>
-        </div>
-      </div>
-      <div>
-        <div class="price-off">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-16">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-20">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-32">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-      </div>
-      <div>
-        <div>
-          <button class="btn-primary btn-32">버튼입니다</button>
-          <button class="btn-secondary btn-32">버튼입니다</button>
-          <button class="btn-outlined btn-32">버튼입니다</button>
-          <button class="btn-ghost btn-32">버튼입니다</button>
-        </div>
-        <div>
-          <button class="btn-primary btn-40">버튼입니다</button>
-          <button class="btn-secondary btn-40">버튼입니다</button>
-          <button class="btn-outlined btn-40">버튼입니다</button>
-          <button class="btn-ghost btn-40">버튼입니다</button>
-        </div>
-        <div>
-          <button class="btn-primary btn-48">버튼입니다</button>
-          <button class="btn-secondary btn-48">버튼입니다</button>
-          <button class="btn-outlined btn-48">버튼입니다</button>
-          <button class="btn-ghost btn-48">버튼입니다</button>
-        </div>
-        <div>
-          <button class="btn-primary btn-55">버튼입니다</button>
-          <button class="btn-secondary btn-55">버튼입니다</button>
-          <button class="btn-outlined btn-55">버튼입니다</button>
-          <button class="btn-ghost btn-55">버튼입니다</button>
-        </div>
-        <div>
-          <button class="btn-primary btn-55" disabled>버튼입니다</button>
-          <button class="btn-secondary btn-55" disabled>버튼입니다</button>
-          <button class="btn-outlined btn-55" disabled>버튼입니다</button>
-          <button class="btn-ghost btn-55" disabled>버튼입니다</button>
-        </div>
-      </div>
-      <div>
-        <input class="form-input" placeholder="Placeholder Text" />
-      </div>
-      <div class="select-group is-active">
-        <select class="form-select">
-          <option value="1">선택 사항 1</option>
-          <option value="2">선택 사항 2</option>
-          <option value="3">선택 사항 3</option>
-          <option value="4">선택 사항 4</option>
-          <option value="5">선택 사항 5</option>
-        </select>
-        <i class="ic-caret" aria-hidden></i>
-      </div>
-      <div class="input-group" aria-hidden>
-        <i class="ic-search"></i>
-        <input type="text" class="form-input" placeholder="스토어 검색" />
-      </div>
-
-      <div class="pagination">
-        <button type="button" class="page-control page-prev">
-          <i class="ic-chevron"></i>
-        </button>
-        <ol class="page-list">
-          <li class="page-item">
-            <a href="/">111111</a>
-          </li>
-          <li class="page-item">
-            <a href="/">111112</a>
-          </li>
-          <li class="page-item is-active">
-            <a href="/">111113</a>
-          </li>
-          <li class="page-item">
-            <a href="/">111114</a>
-          </li>
-          <li class="page-item">
-            <a href="/">111115</a>
-          </li>
-        </ol>
-        <button type="button" class="page-control page-next">
-          <i class="ic-chevron"></i>
-        </button>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
