--- a/components.html
+++ b/components.html
@@ -134,8 +134,8 @@
         </select>
         <i class="ic-caret" aria-hidden></i>
       </div>
-      <div class="input-group" aria-hidden>
-        <i class="ic-search"></i>
+      <div class="input-group">
+        <i class="ic-search" aria-hidden></i>
         <input type="text" class="form-input" placeholder="스토어 검색" />
       </div>
 
