🚧 Update the gnb component

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   </a>
 
                   <button
-                    class="gnb-avatar-btton sm-hidden"
+                    class="gnb-avatar-button sm-hidden"
                     type="button"
                     aria-label="마이 메뉴 열기 버튼"
                   >
@@ -109,12 +109,11 @@
                       />
                     </div>
                   </button>
-
-                  <button class="btn-primary btn-40 sm-hidden" type="button">
-                    글쓰기
-                    <i class="ic-chevron" aria-hidden></i>
-                  </button>
                 </div>
+                <button class="btn-primary btn-40 sm-hidden" type="button">
+                  글쓰기
+                  <i class="ic-chevron" aria-hidden></i>
+                </button>
               </div>
             </div>
           </div>
