🚧 Style sidebar-nav and sidebar user-menu

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div> -->
       </header>
 
-      <nav>
+      <nav class="sidebar-nav">
         <h2 class="visually-hidden">메뉴</h2>
 
         <div class="drawer-menu is-community">
