--- a/index.html
+++ b/index.html
@@ -57,13 +57,52 @@
               </div>
 
               <div class="gnb-right">
-                <div class="input-group lg-only">
-                  <i class="ic-search" aria-hidden></i>
-                  <input
-                    type="text"
-                    class="form-input"
-                    placeholder="스토어 검색"
-                  />
+                <div class="gnb-search">
+                  <div class="input-group lg-only">
+                    <i class="ic-search" aria-hidden></i>
+                    <input
+                      type="text"
+                      class="form-input"
+                      placeholder="스토어 검색"
+                    />
+                  </div>
+
+                  <section class="search-history is-active">
+                    <header class="search-history-header">
+                      <h2 class="title">최근 검색어</h2>
+                      <button type="button">전체 삭제</button>
+                    </header>
+
+                    <!-- NOTE: 최근 검색어가 존재할 경우-->
+                    <div class="search-history-content">
+                      <ol class="search-history-list">
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            소파
+                            <button class="delete-button" type="button">
+                              <i class="ic-close" aria-label="검색어 삭제"></i>
+                            </button>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            스탠드
+                            <button class="delete-button" type="button">
+                              <i class="ic-close" aria-label="검색어 삭제"></i>
+                            </button>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            의자
+                            <button class="delete-button" type="button">
+                              <i class="ic-close" aria-label="검색어 삭제"></i>
+                            </button>
+                          </button>
+                        </li>
+                      </ol>
+                    </div>
+                  </section>
                 </div>
 
                 <!-- NOTE: 로그인을 한 경우-->
