--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="drawer-menu-content">
             <ul class="drawer-menu-list">
               <li class="drawer-menu-item">
-                <a href="/">스토어홈</a>
+                <a href="/">스토어</a>
               </li>
               <li class="drawer-menu-item">
                 <a href="/">카테고리</a>
@@ -428,9 +428,9 @@
         <div class="row">
           <div class="col-sm-4">
             <h1 class="visually-hidden">스토어 메뉴</h1>
-            <ul class="ln-list">
-              <li class="lnb-item">
-                <a href="/">스토어홈</a>
+            <ul class="lnb-list">
+              <li class="lnb-item is-active">
+                <a href="/">스토어</a>
               </li>
               <li class="lnb-item">
                 <a href="/">카테고리</a>
