--- a/index.html
+++ b/index.html
@@ -259,7 +259,52 @@
       <!-- 상품 상세페이지 본론 -->
     </main>
 
-    <footer class="global-footer"></footer>
+    <footer class="global-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h3 class="global-footer-title">
+              고객센터 <i class="ic-chevron" aria-hidden></i>
+            </h3>
+            <a class="global-footer-contact" href="tel:1004-1004">1004-1004</a>
+            <p class="global-footer-time">
+              평일 09:00 ~ 18:00 (주말 &amp; 공휴일 제외)
+            </p>
+
+            <dl class="global-footer-detail-list">
+              <div class="global-footer-detail-item">
+                <dt>상호명</dt>
+                <dd>내일의 집</dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>이메일</dt>
+                <dd>
+                  <address>
+                    <a href="mailto:thesed2s12@gmail.com">
+                      thesed2s12@gmail.com
+                    </a>
+                  </address>
+                </dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>대표이사</dt>
+                <dd>김데이</dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>주소</dt>
+                <dd>
+                  <address>
+                    <a href="http://www.tomorrow.co.kr" target="_blank"
+                      >http://www.tomorrow.co.kr</a
+                    >
+                  </address>
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
