🐛 Exchange dt tag and dd tag for semantically markup

--- a/index.html
+++ b/index.html
@@ -497,15 +497,15 @@
               </div>
 
               <dl class="order-summary">
-                <dd>주문금액</dd>
-                <dt>
+                <dt>주문금액</dt>
+                <dd>
                   <output for="select-1 select-2">
                     <div class="price-20">
                       <strong class="amount">0</strong>
                       <span class="currency">원</span>
                     </div>
                   </output>
-                </dt>
+                </dd>
               </dl>
 
               <div class="button-group">
