💄 Create a shared component: product-table

--- a/components.html
+++ b/components.html
@@ -198,6 +198,61 @@
           </header>
         </div>
       </div>
+
+      <div>
+        <table class="product-table">
+          <tbody>
+            <tr>
+              <th scope="row">배송</th>
+              <td>일반택배</td>
+            </tr>
+            <tr>
+              <th scope="row">배송비</th>
+              <td>무료 배송</td>
+            </tr>
+            <tr>
+              <th scope="row">반품배송비</th>
+              <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                alias officia quas maxime numquam soluta molestias assumenda
+                quidem iusto, explicabo itaque placeat porro neque at ea ad fuga
+                ratione cumque!
+              </th>
+              <td>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptate eveniet, molestiae voluptatem enim iusto harum labore
+                velit explicabo consequatur libero eligendi, nam hic, facilis
+                ipsa quas totam corrupti et nemo non. Veritatis fugiat corrupti,
+                consequatur, sint quam eaque exercitationem sit maiores,
+                doloribus placeat laboriosam reiciendis qui. Laboriosam veniam
+                deleniti sit eum numquam. Sequi quasi dicta dolores veritatis
+                sint, repudiandae magni maxime dolor quas quia saepe vitae
+                nesciunt aliquid molestias aperiam, atque blanditiis ipsam
+                incidunt, minima reprehenderit temporibus inventore sapiente
+                excepturi nihil. Assumenda ea expedita architecto quam fugiat
+                deleniti dolorem asperiores officia veritatis facilis provident
+                rem voluptates quos tenetur fugit ad mollitia, voluptatum modi
+                distinctio labore exercitationem nam. Culpa quibusdam tempore a
+                magnam impedit beatae veniam similique mollitia quod asperiores
+                laudantium dolore illum, reprehenderit magni aliquam
+                perspiciatis nesciunt error consequuntur dolorem odit excepturi
+                veritatis deleniti minus! Placeat incidunt obcaecati impedit
+                dignissimos dolorem vitae rem facilis libero numquam, quis sunt
+                cupiditate possimus reprehenderit, tempore esse odit a
+                aspernatur suscipit distinctio aut? Officia, tempore quos iure
+                quidem, perferendis in quo expedita totam cumque similique rem
+                rerum? Vel natus deleniti temporibus eaque id eveniet officia
+                veniam a? Quae totam laborum nihil assumenda unde modi hic,
+                soluta, magnam, molestiae eaque quod vero recusandae libero
+                alias?
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
