--- a/index.html
+++ b/index.html
@@ -727,6 +727,7 @@
                 </table>
               </div>
             </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
       </div>
