🐛 Replace .average-scroe with .average-score

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
               <div class="product-section-content">
                 <div class="review-scoreboard">
                   <div class="score-summary">
-                    <strong class="average-scroe" aria-label="평점 4.8">
+                    <strong class="average-score" aria-label="평점 4.8">
                       4.8
                     </strong>
                     <div class="star-rating">
