--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                         <dt>5점</dt>
                         <dd>
                           <div class="bar-graph" aria-hidden>
-                            <div class="active-bar"></div>
+                            <div class="active-bar" style="width: 82.5%"></div>
                           </div>
                           <strong class="count" aria-label="467명">467</strong>
                         </dd>
@@ -771,7 +771,7 @@
                         <dt>4점</dt>
                         <dd>
                           <div class="bar-graph" aria-hidden>
-                            <div class="active-bar"></div>
+                            <div class="active-bar" style="width: 15.37%"></div>
                           </div>
                           <strong class="count" aria-label="87명">87</strong>
                         </dd>
@@ -781,7 +781,7 @@
                         <dt>3점</dt>
                         <dd>
                           <div class="bar-graph" aria-hidden>
-                            <div class="active-bar"></div>
+                            <div class="active-bar" style="width: 2.29%"></div>
                           </div>
                           <strong class="count" aria-label="13명">13</strong>
                         </dd>
