--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
             <div class="product-section-divider sm-only" aria-hidden></div> -->
 
             <section
-              class="product-section product-inquiry"
+              class="product-section product-inquiry is-open"
               id="product-inquiry"
               role="tabpanel"
             >
@@ -1356,7 +1356,18 @@
             </section>
             <div class="product-section-divider sm-only" aria-hidden></div> -->
 
-            <div id="product-shipment" role="tabpanel">
+            <div
+              class="product-shipment is-open"
+              id="product-shipment"
+              role="tabpanel"
+            >
+              <header class="product-section-header sm-only">
+                <h1 class="title">배송/교환/환불</h1>
+                <button class="icon-button" type="button" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden></i>
+                </button>
+              </header>
+
               <section class="product-section">
                 <header class="product-section-header">
                   <h1 class="title">배송</h1>
@@ -1409,8 +1420,8 @@
                   </table>
                 </div>
               </section>
+              <div class="product-section-divider sm-only" aria-hidden></div>
             </div>
-            <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
       </div>
