🚧 Mark up product-user-gallery section and gallery-card

--- a/index.html
+++ b/index.html
@@ -618,6 +618,39 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4 col-lg-8">
+            <section class="product-section product-user-gallery">
+              <header class="product-section-header">
+                <h1 class="title">유저들의 스타일링샷</h1>
+                <strong class="badge" aria-label="461개">461</strong>
+                <a class="icon-button is-right" href="/" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden></i>
+                </a>
+              </header>
+              <a class="product-section-content">
+                <ol>
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/images/img-review-01.jpg" alt="" />
+                        <figcaption class="visually-hidden">
+                          김데이 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+
+                      <div class="gallery-card-detail">
+                        <a class="avatar-32" href="/">
+                          <img src="./assets/images/img-user-01.jpg" alt="김데이" />
+                        </a>
+                        <a class="user-name" href="/">김데이</a>
+                        <span class="order">1/461</span>
+                      </div>
+                    </div>
+                  </li>
+                </ol>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
+
             <section
               class="product-section product-spec is-open"
               id="product-spec"
@@ -1604,6 +1637,7 @@
                 </ul>
               </div>
             </section>
+
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
