🚧 Mark up gallery-card

--- a/index.html
+++ b/index.html
@@ -646,6 +646,82 @@
                       </div>
                     </div>
                   </li>
+
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/images/img-review-02.jpg" alt="" />
+                        <figcaption class="visually-hidden">
+                          마멜 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+
+                      <div class="gallery-card-detail">
+                        <a class="avatar-32" href="/">
+                          <img src="./assets/images/img-user-02.jpg" alt="마멜" />
+                        </a>
+                        <a class="user-name" href="/">마멜</a>
+                        <span class="order">2/461</span>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/images/img-review-03.jpg" alt="" />
+                        <figcaption class="visually-hidden">
+                          시나모롤 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+
+                      <div class="gallery-card-detail">
+                        <a class="avatar-32" href="/">
+                          <img src="./assets/images/img-user-03.png" alt="시나모롤" />
+                        </a>
+                        <a class="user-name" href="/">김데이</a>
+                        <span class="order">3/461</span>
+                      </div>
+                    </div>
+                  </li>
+
+                   <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/images/img-review-04.jpg" alt="" />
+                        <figcaption class="visually-hidden">
+                          포차코 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+
+                      <div class="gallery-card-detail">
+                        <a class="avatar-32" href="/">
+                          <img src="./assets/images/img-user-04.png" alt="포차코" />
+                        </a>
+                        <a class="user-name" href="/">포차코</a>
+                        <span class="order">4/461</span>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/images/img-review-05.jpg" alt="" />
+                        <figcaption class="visually-hidden">
+                          쿠로미 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+
+                      <div class="gallery-card-detail">
+                        <a class="avatar-32" href="/">
+                          <img src="./assets/images/img-user-05.png" alt="쿠로미" />
+                        </a>
+                        <a class="user-name" href="/">쿠로미</a>
+                        <span class="order">5/461</span>
+                      </div>
+                    </div>
+                  </li>
                 </ol>
               </div>
             </section>
