--- a/index.html
+++ b/index.html
@@ -626,103 +626,138 @@
                   <i class="ic-chevron" aria-hidden></i>
                 </a>
               </header>
-              <a class="product-section-content">
-                <ol>
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-01.jpg" alt="" />
-                        <figcaption class="visually-hidden">
-                          김데이 님의 스타일링샷
-                        </figcaption>
-                      </figure>
+              <div class="product-section-content">
+                <div class="user-gallery" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              김데이 님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a class="avatar-32" href="/">
-                          <img src="./assets/images/img-user-01.jpg" alt="김데이" />
-                        </a>
-                        <a class="user-name" href="/">김데이</a>
-                        <span class="order">1/461</span>
-                      </div>
-                    </div>
-                  </li>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-01.jpg"
+                                alt="김데이"
+                              />
+                            </a>
+                            <a class="user-name" href="/">김데이</a>
+                            <span class="order">1/461</span>
+                          </div>
+                        </div>
+                      </li>
 
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-02.jpg" alt="" />
-                        <figcaption class="visually-hidden">
-                          마멜 님의 스타일링샷
-                        </figcaption>
-                      </figure>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              마멜 님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a class="avatar-32" href="/">
-                          <img src="./assets/images/img-user-02.jpg" alt="마멜" />
-                        </a>
-                        <a class="user-name" href="/">마멜</a>
-                        <span class="order">2/461</span>
-                      </div>
-                    </div>
-                  </li>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-02.jpg"
+                                alt="마멜"
+                              />
+                            </a>
+                            <a class="user-name" href="/">마멜</a>
+                            <span class="order">2/461</span>
+                          </div>
+                        </div>
+                      </li>
 
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-03.jpg" alt="" />
-                        <figcaption class="visually-hidden">
-                          시나모롤 님의 스타일링샷
-                        </figcaption>
-                      </figure>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              시나모롤 님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a class="avatar-32" href="/">
-                          <img src="./assets/images/img-user-03.png" alt="시나모롤" />
-                        </a>
-                        <a class="user-name" href="/">김데이</a>
-                        <span class="order">3/461</span>
-                      </div>
-                    </div>
-                  </li>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-03.png"
+                                alt="시나모롤"
+                              />
+                            </a>
+                            <a class="user-name" href="/">시나모롤</a>
+                            <span class="order">3/461</span>
+                          </div>
+                        </div>
+                      </li>
 
-                   <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-04.jpg" alt="" />
-                        <figcaption class="visually-hidden">
-                          포차코 님의 스타일링샷
-                        </figcaption>
-                      </figure>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              포차코 님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a class="avatar-32" href="/">
-                          <img src="./assets/images/img-user-04.png" alt="포차코" />
-                        </a>
-                        <a class="user-name" href="/">포차코</a>
-                        <span class="order">4/461</span>
-                      </div>
-                    </div>
-                  </li>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-04.png"
+                                alt="포차코"
+                              />
+                            </a>
+                            <a class="user-name" href="/">포차코</a>
+                            <span class="order">4/461</span>
+                          </div>
+                        </div>
+                      </li>
 
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-05.jpg" alt="" />
-                        <figcaption class="visually-hidden">
-                          쿠로미 님의 스타일링샷
-                        </figcaption>
-                      </figure>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-05.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              쿠로미 님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a class="avatar-32" href="/">
-                          <img src="./assets/images/img-user-05.png" alt="쿠로미" />
-                        </a>
-                        <a class="user-name" href="/">쿠로미</a>
-                        <span class="order">5/461</span>
-                      </div>
-                    </div>
-                  </li>
-                </ol>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-05.png"
+                                alt="쿠로미"
+                              />
+                            </a>
+                            <a class="user-name" href="/">쿠로미</a>
+                            <span class="order">5/461</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+                  <div class="user-gallery-thumbnail"></div>
+                </div>
               </div>
             </section>
             <div class="product-section-divider sm-only" aria-hidden></div>
