--- a/index.html
+++ b/index.html
@@ -630,7 +630,11 @@
                 <div class="user-gallery" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -655,7 +659,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -680,7 +688,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -705,7 +717,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -730,7 +746,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-5"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -757,8 +777,12 @@
                     </ol>
                   </div>
                   <div class="user-gallery-thumbnail">
-                    <ol class="thumbnail-list">
-                      <li class="thumbnail-item">
+                    <ol class="thumbnail-list" role="tablist">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab1"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/images/img-review-01.jpg"
@@ -767,7 +791,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab2"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/images/img-review-02.jpg"
@@ -776,7 +804,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab3"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/images/img-review-03.jpg"
@@ -785,7 +817,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab4"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/images/img-review-04.jpg"
@@ -794,7 +830,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab5"
+                        role="tab"
+                      >
                         <button type="button">
                           <img
                             src="./assets/images/img-review-05.jpg"
