✨ Implement .user-gallery-thumbnail and its controls

--- a/index.html
+++ b/index.html
@@ -775,12 +775,30 @@
                         </div>
                       </li>
                     </ol>
+
+                    <div class="user-gallery-controls sm-hidden">
+                      <button
+                        type="button"
+                        class="control-button is-prev"
+                        aria-label="이전 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                      <button
+                        type="button"
+                        class="control-button is-next"
+                        aria-label="다음 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                    </div>
                   </div>
+
                   <div class="user-gallery-thumbnail">
                     <ol class="thumbnail-list" role="tablist">
                       <li
                         class="thumbnail-item"
-                        id="user-gallery-tab1"
+                        id="user-gallery-tab-1"
                         role="tab"
                       >
                         <button type="button">
@@ -793,7 +811,7 @@
 
                       <li
                         class="thumbnail-item"
-                        id="user-gallery-tab2"
+                        id="user-gallery-tab-2"
                         role="tab"
                       >
                         <button type="button">
@@ -806,7 +824,7 @@
 
                       <li
                         class="thumbnail-item"
-                        id="user-gallery-tab3"
+                        id="user-gallery-tab-3"
                         role="tab"
                       >
                         <button type="button">
@@ -819,7 +837,7 @@
 
                       <li
                         class="thumbnail-item"
-                        id="user-gallery-tab4"
+                        id="user-gallery-tab-4"
                         role="tab"
                       >
                         <button type="button">
@@ -832,7 +850,7 @@
 
                       <li
                         class="thumbnail-item"
-                        id="user-gallery-tab5"
+                        id="user-gallery-tab-5"
                         role="tab"
                       >
                         <button type="button">
