--- a/index.html
+++ b/index.html
@@ -2089,10 +2089,17 @@
                 </ul>
               </div>
             </section>
-
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
+      </div>
+
+      <div class="order-cta lg-hidden">
+        <button class="btn-ghost btn-48" type="button">
+          <i class="ic-bookmark" aria-hidden></i>
+          <span aria-label="북마크 18,302회">18,302</span>
+        </button>
+        <button class="btn-primary btn-48" type="button">구매하기</button>
       </div>
     </main>
 
