🚧 Style .floating-order-form

--- a/index.html
+++ b/index.html
@@ -2092,7 +2092,11 @@
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
           <div class="col-lg-4 lg-only">
-            <form class="floating-order-form" action="/" method="POST">
+            <form
+              class="floating-order-form order-form"
+              action="/"
+              method="POST"
+            >
               <div class="order-inputs">
                 <div class="select-group is-active">
                   <select
@@ -2188,14 +2192,15 @@
                   <i class="ic-bookmark" aria-hidden></i>
                 </button>
 
-                <!-- NOTE: 북마크 해제 -->
+                <!-- NOTE: 북마크 해제
                 <button
                   class="bookmark-button is-active btn-55"
                   type="button"
                   aria-label="북마크 해제"
                 >
                   <i class="ic-bookmark-filled" aria-hidden></i>
-                </button>
+                </button> -->
+
                 <button class="btn-outlined btn-55" type="button">
                   장바구니
                 </button>
