--- a/index.html
+++ b/index.html
@@ -2600,6 +2600,14 @@
       </form>
     </aside>
 
+    <aside class="cart-modal">
+      <h1 class="cart-title">장바구니에 상품을 담았습니다</h1>
+      <div class="button-group">
+        <a class="btn-primary btn-48" href="/">장바구니 보러가기</a>
+        <button class="btn-secondary btn-48" type="button">확인</button>
+      </div>
+    </aside>
+
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
