🚧 Mark up .bookmark-toast

--- a/index.html
+++ b/index.html
@@ -2608,6 +2608,27 @@
       </div>
     </aside>
 
+    <!-- NOTE: 북마크에서 추가했을 때 -->
+    <aside class="bookmark-toast">
+      <h1 class="bookmark-title">스크랩했습니다</h1>
+      <button class="close-button" type="button" aria-label="닫기">
+        <i class="ic-close" aria-hidden></i>
+      </button>
+
+      <div class="button-group">
+        <button class="btn-outlined btn-32" type="button">스크랩북 보기</button>
+        <button class="btn-primary btn-32" type="button">폴더에 담기</button>
+      </div>
+
+      <!-- NOTE: 북마크에서 삭제했을 때 -->
+      <!-- <aside class="bookmark-toast">
+        <h1 class="bookmark-title">스크랩북에서 삭제했습니다</h1>
+        <button class="close-button" type="button" aria-label="닫기">
+          <i class="ic-close" aria-hidden></i>
+        </button>
+      </aside> -->
+    </aside>
+
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
