🚧 Combine section-header.js into product-section.js and implement showing full product-spec and product-inquity section

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
             </section>
 
             <section
-              class="product-section product-spec is-open"
+              class="product-section product-spec"
               id="product-spec"
               role="tabpanel"
             >
@@ -1646,7 +1646,7 @@
             <div class="product-section-divider sm-only" aria-hidden></div> -->
 
             <section
-              class="product-section product-inquiry is-open"
+              class="product-section product-inquiry"
               id="product-inquiry"
               role="tabpanel"
             >
@@ -2630,12 +2630,12 @@
     <script src="./js/carousels.js"></script>
     <script src="./js/sidebar.js"></script>
     <script src="./js/sidebar-drawer.js"></script>
-    <script src="./js/section-header.js"></script>
     <script src="./js/search-modal.js"></script>
     <script src="./js/order-cta.js"></script>
     <script src="./js/my-menu.js"></script>
     <script src="./js/gnb-search.js"></script>
     <script src="./js/review.js"></script>
     <script src="./js/product-tab.js"></script>
+    <script src="./js/product-section.js"></script>
   </body>
 </html>
