🚧 Implement toggling bookmark button of floating-order-form

--- a/index.html
+++ b/index.html
@@ -2637,5 +2637,6 @@
     <script src="./js/review.js"></script>
     <script src="./js/product-tab.js"></script>
     <script src="./js/product-section.js"></script>
+    <script src="./js/floating-order-form.js"></script>
   </body>
 </html>
