🚧 Implment toggling cart-modal

--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@
       </button>
 
       <div class="button-group">
-        <a class="btn-outlined btn-32" type="button">스크랩북 보기</a>
+        <a class="btn-outlined btn-32" href="/" type="button">스크랩북 보기</a>
         <button class="btn-primary btn-32" type="button">폴더에 담기</button>
       </div>
     </aside>
@@ -2638,5 +2638,6 @@
     <script src="./js/product-tab.js"></script>
     <script src="./js/product-section.js"></script>
     <script src="./js/floating-order-form.js"></script>
+    <script src="./js/cart-modal.js"></script>
   </body>
 </html>
