🚧 Implement checkout-items when selecting a product and delete it by clicking delete-button

--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
                 <div class="select-group is-active">
                   <select class="form-select" id="select-1" required>
                     <option value="">선택</option>
-                    <option value="1">그린 H0044 (37,900원)</option>
-                    <option value="2">화이트 H0037 (37,900원</option>
+                    <option value="0">그린 H0044(32,900원)</option>
+                    <option value="1">화이트 H0037(32,900원)</option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
                 </div>
@@ -487,9 +487,9 @@
                 <div class="select-group">
                   <select class="form-select" id="select-2">
                     <option value="">추가상품 (선택)</option>
-                    <option value="1">
+                    <option value="0">
                       추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매 1위
-                      믿고 구매하세요. (40,000원)
+                      믿고 구매하세요.(40,000원)
                     </option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
@@ -503,7 +503,7 @@
                       <header class="checkout-header">
                         <h4 class="checkout-title">
                           추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
-                          1위 믿고 구매하세요. (40,000원)
+                          1위 믿고 구매하세요.
                         </h4>
                         <button
                           class="delete-button"
@@ -2101,8 +2101,8 @@
                     required
                   >
                     <option value="">선택</option>
-                    <option value="1">그린 H0044 (37,900원)</option>
-                    <option value="2">화이트 H0037 (37,900원</option>
+                    <option value="0">그린 H0044(32,900원)</option>
+                    <option value="1">화이트 H0037(32,900원)</option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
                 </div>
@@ -2110,9 +2110,9 @@
                 <div class="select-group">
                   <select class="form-select" id="floating-order-form-select-2">
                     <option value="">추가상품 (선택)</option>
-                    <option value="1">
+                    <option value="0">
                       추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매 1위
-                      믿고 구매하세요. (40,000원)
+                      믿고 구매하세요.(40,000원)
                     </option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
@@ -2126,7 +2126,7 @@
                       <header class="checkout-header">
                         <h4 class="checkout-title">
                           추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
-                          1위 믿고 구매하세요. (40,000원)
+                          1위 믿고 구매하세요.
                         </h4>
                         <button
                           class="delete-button"
@@ -2503,8 +2503,8 @@
                     required
                   >
                     <option value="">선택</option>
-                    <option value="1">그린 H0044 (37,900원)</option>
-                    <option value="2">화이트 H0037 (37,900원</option>
+                    <option value="0">그린 H0044(32,900원)</option>
+                    <option value="1">화이트 H0037(32,900원)</option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
                 </div>
@@ -2512,9 +2512,9 @@
                 <div class="select-group">
                   <select class="form-select" id="order-form-modal-select-2">
                     <option value="">추가상품 (선택)</option>
-                    <option value="1">
+                    <option value="0">
                       추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매 1위
-                      믿고 구매하세요. (40,000원)
+                      믿고 구매하세요.(40,000원)
                     </option>
                   </select>
                   <i class="ic-caret" aria-hidden></i>
@@ -2523,13 +2523,10 @@
 
               <div class="order-checkouts">
                 <ul class="checkout-list">
-                  <li class="checkout-item">
+                  <!-- <li class="checkout-item">
                     <div class="checkout-card">
                       <header class="checkout-header">
-                        <h4 class="checkout-title">
-                          추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
-                          1위 믿고 구매하세요. (40,000원)
-                        </h4>
+                        <h4 class="checkout-title">그린 H0044</h4>
                         <button
                           class="delete-button"
                           type="button"
@@ -2556,13 +2553,13 @@
                           for="order-form-modal-checkout-item-1"
                         >
                           <div class="price-16">
-                            <strong class="amount">40,000</strong>
+                            <strong class="amount">37,900</strong>
                             <span class="currency">원</span>
                           </div>
                         </output>
                       </footer>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
 
