🚧 Extract function to add checkout-item and implement price change when quantity is changed

--- a/index.html
+++ b/index.html
@@ -2636,5 +2636,6 @@
     <script src="./js/product-section.js"></script>
     <script src="./js/floating-order-form.js"></script>
     <script src="./js/cart-modal.js"></script>
+    <script src="./js/order-form.js"></script>
   </body>
 </html>
