💄 Implment order-forms

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
               <div class="order-checkouts">
                 <ul class="checkout-list">
-                  <li class="checkout-item">
+                  <!-- <li class="checkout-item">
                     <div class="checkout-card">
                       <header class="checkout-header">
                         <h4 class="checkout-title">
@@ -534,7 +534,7 @@
                         </output>
                       </footer>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
 
@@ -2121,7 +2121,7 @@
 
               <div class="order-checkouts">
                 <ul class="checkout-list">
-                  <li class="checkout-item">
+                  <!-- <li class="checkout-item">
                     <div class="checkout-card">
                       <header class="checkout-header">
                         <h4 class="checkout-title">
@@ -2160,7 +2160,7 @@
                         </output>
                       </footer>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
 
@@ -2636,6 +2636,6 @@
     <script src="./js/product-section.js"></script>
     <script src="./js/floating-order-form.js"></script>
     <script src="./js/cart-modal.js"></script>
-    <script src="./js/order-form.js"></script>
+    <script src="./js/order-forms.js"></script>
   </body>
 </html>
