📝 Add meta tag and apply open-graph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
       전기히터 &gt; 캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)
       | 내일의 집
     </title>
+    <meta
+      name="description"
+      content="가구 · 소품은 물론 이제 가전, 주방용품, 데코/식물, 생활용품, 생필품, 반려동물, 캠핑용품, 실내운동까지 모두 '스토어'에 있어요!"
+    />
+    <meta
+      name="keywords"
+      content="내일의집, 내일의 집, 가구, 소품, 가전, 주방용품, 데코, 식물, 생활용품, 생필품, 반려동물, 캠핑용품, 실내운동, 인테리어"
+    />
+    <meta
+      property="og:title"
+      content="쇼핑을 쉽게, 스타일링은 즐겁게! 내일의집 스토어"
+    />
+    <meta property="og:image" content="https://theseda2s.github.io/tomorrow-house/assets/og-image-01.png" />
+    <meta
+      property="og:description"
+      content="쇼핑을 쉽게, 스타일링은 즐겁게! 내일의집 스토어"
+    />
+    <meta
+      property="og:url"
+      content="https://theseda2s.github.io/tomorrow-house/"
+    />
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
